Card-container and cards creations

--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>EPL Big 6</title>
 </head>
 <body>
-   
+    <div class="card-container">
+        <div class="card active" style="background-image: url(https://c.files.bbci.co.uk/CD3C/production/_118104525_gettyimages-1225539750.jpg);">
+            <h3>Big 6</h3>
+        </div>
+
+        <div class="card" style="background-image: url(https://wallpapers.com/images/high/arsenal-logo-on-soccer-net-qzcrnrz2tg8ynzts.webp);">
+            <h3>Arsenal</h3>
+        </div>
+
+        <div class="card" style="background-image: url(https://wallpapers.com/images/high/chelsea-fc-logo-xz2ftfvt8v3hzg87.webp);">
+            <h3>Chelsea</h3>
+        </div>
+
+        <div class="card" style="background-image: url(https://wallpapers.com/images/high/tottenham-28xm9oktep8qp1hs.webp);">
+            <h3>Tottenham</h3>
+        </div>
+
+        <div class="card" style="background-image: url(https://wallpapers.com/images/hd/glitter-gold-liverpool-fc-in-black-wood-hv8599s6yqux8x7r.webp);">
+            <h3>Liverpool</h3>
+        </div>
+
+        <div class="card" style="background-image: url(https://wallpapers.com/images/high/manchester-city-4k-grunge-blue-logo-3xfpibcjexhrdbn3.webp);">
+            <h3>Man City</h3>
+        </div>
+
+        <div class="card" style="background-image: url(https://wallpapers.com/images/hd/man-utd-wallpaper-bs02fl9fsj34hpe1.webp);">
+            <h3>Man United</h3>
+        </div>
+    </div>
+    
 </body>
 </html>
