--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>EPL Big 6</title>
+    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/?size=100&id=21900&format=png&color=000000">
 </head>
+
 <body>
     <div class="card-container">
         <div class="card active" style="background-image: url(https://c.files.bbci.co.uk/CD3C/production/_118104525_gettyimages-1225539750.jpg);">
-            <h3>Big 6</h3>
+            <h3>All</h3>
         </div>
 
         <div class="card" style="background-image: url(https://wallpapers.com/images/high/arsenal-logo-on-soccer-net-qzcrnrz2tg8ynzts.webp);">
@@ -20,7 +22,7 @@
             <h3>Chelsea</h3>
         </div>
 
-        <div class="card" style="background-image: url(https://wallpapers.com/images/high/tottenham-28xm9oktep8qp1hs.webp);">
+        <div class="card" style="background-image: url(https://wallpapers.com/images/high/tottenham-h7pejk6v6qmfz8xt.webp);">
             <h3>Tottenham</h3>
         </div>
 
@@ -28,15 +30,16 @@
             <h3>Liverpool</h3>
         </div>
 
-        <div class="card" style="background-image: url(https://wallpapers.com/images/high/manchester-city-4k-grunge-blue-logo-3xfpibcjexhrdbn3.webp);">
+        <div class="card" style="background-image: url(https://wallpapers.com/images/high/manchester-city-logo-blue-flag-4ayzcphq2frqd9xb.webp);">
             <h3>Man City</h3>
         </div>
 
-        <div class="card" style="background-image: url(https://wallpapers.com/images/hd/man-utd-wallpaper-bs02fl9fsj34hpe1.webp);">
+        <div class="card" style="background-image: url(https://wallpapers.com/images/high/caption-manchester-united-players-celebrating-victory-49kmc1p2jzs868d7.webp);">
             <h3>Man United</h3>
         </div>
     </div>
 
     <script src="index.js"></script>
+
 </body>
 </html>
